# AI-Shorts-Creator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  autocropper.py  pyproject.toml  test.py
.github/workflows/: pr.yaml
src/: logger.py  main.py  schemas.py  tasks.py  text_segmenters.py  utils.py  worker.py
