[tool.poetry]
name = "shorts-cutter"
version = "0.1.0"
description = ""
authors = ["otecart <otecartff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
youtube-dl = {git = "https://github.com/ytdl-org/ytdl-nightly.git", rev = "2024.07.11"}
opencv-python = "^4.10.0.84"
openai = "^1.35.13"
youtube-transcript-api = "^0.6.2"
fastapi-slim = "^0.111.1"
fastapi-cli = "^0.0.4"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
taskiq = "^0.11.6"
taskiq-aio-pika = "^0.4.0"
taskiq-redis = "^1.0.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
